@@ -10,8 +10,7 @@ import com.github.scribejava.core.utils.OAuthEncoder;
 import com.github.scribejava.core.utils.Preconditions;
 
 /**
- * HMAC-SHA1 implementation of {@link SignatureService}
- * https://tools.ietf.org/html/rfc5849#section-3.4.2
+ * HMAC-SHA1 implementation of {@link SignatureService} https://tools.ietf.org/html/rfc5849#section-3.4.2
  */
 public class HMACSha1SignatureService implements SignatureService {
 
@@ -27,8 +26,8 @@ public class HMACSha1SignatureService implements SignatureService {
     @Override
     public String getSignature(String baseString, String apiSecret, String tokenSecret) {
         try {
-            Preconditions.checkEmptyString(baseString, "Base string cant be null or empty string");
-            Preconditions.checkEmptyString(apiSecret, "Api secret cant be null or empty string");
+            Preconditions.checkEmptyString(baseString, "Base string can't be null or empty string");
+            Preconditions.checkNotNull(apiSecret, "Api secret can't be null");
             return doSign(baseString, OAuthEncoder.encode(apiSecret) + '&' + OAuthEncoder.encode(tokenSecret));
         } catch (UnsupportedEncodingException | NoSuchAlgorithmException | InvalidKeyException | RuntimeException e) {
             throw new OAuthSignatureException(baseString, e);
